[package]
name = "string_concat"
version = "0.0.0"
authors = ["Richard Anaya"]
edition = "2018"
description = "A useful macro for concatenating strings in low overhead manner"
license = "MIT OR Apache-2.0"
repository = "https://github.com/richardanaya/string_concat"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
